Trying to correct the Logic to dixplay Initials and Score

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
+    <ul id="highscores-list"></ul>
 
     <div class="timer">Time: <span id="time">0</span></div>
 
