Trying to get the Score and Initials to display on the HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
-    <ul id="highscores-list"></ul>
+    <ul id="highscores"></ul>
 
     <div class="timer">Time: <span id="time">0</span></div>
 
@@ -44,6 +44,8 @@
     </div>
 
     <script src="./assets/js/questions.js"></script>
+    <script src="./assets/js/display.js"></script>
     <script src="./assets/js/logic.js"></script>
+
   </body>
 </html>
